--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css\style.css">
     <!-- title start here -->
-    <title>Home || kmehtab</title>
+    <title>Home || <kmehtab/> </title>
     <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
@@ -14,21 +14,21 @@
     <!-- nav-bar start here -->
        <nav class="navbar navbar-expand fixed-top" id="nav">
            <div class="nav navbar-nav">
-                <a class="navbar-brand brand" href="#">
+                <a class="navbar-brand brand active" href="index.html">
                         <span><</span>
                         <span>kmehtab</span>
                         <span>/></span>
                     </a>
-            <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link" href="my-project.html">My Projects</a>
-            <a class="nav-item nav-link" href="about-me.html">About me</a>
+            <a class="nav-item nav-link active" id="nav-link" href="index.html">Home</span></a>
+            <a class="nav-item nav-link" id="nav-link" href="my-project.html">Projects</a>
+            <a class="nav-item nav-link" id="nav-link" href="about-me.html">About me</a>
            </div>
        </nav>
        <!-- jumbotron start here -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-3">Hello, World!</h1>
-                <p class="lead">My name is Khan Mehtab also known as (kmehtab)</p>
+                <h1 class="display-3" id="header-1">Hello, World!</h1>
+                <p class="lead" id="header-2">My name is Khan Mehtab (kmehtab)</p>
             </div>
         </div>
         <!-- parallex effect -->
