--- a/my-project.html
+++ b/my-project.html
@@ -5,23 +5,40 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css\style.css">
-    <title>Projects</title>
+    <title>Projects ||
+        <kmehtab/>
+    </title>
     <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <!-- nav-bar start here -->
-       <nav class="navbar navbar-expand fixed-top" id="nav">
-           <div class="nav navbar-nav">
-                <a class="navbar-brand brand" href="#">
-                        <span><</span>
-                        <span>kmehtab</span>
-                        <span>/></span>
-                    </a>   
-            <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link" href="my-project.html">My Projects</a>
-            <a class="nav-item nav-link" href="about-me.html">About me</a>
-           </div>
-       </nav>
+    <nav class="navbar navbar-expand fixed-top" id="nav">
+        <div class="nav navbar-nav">
+            <a class="navbar-brand brand active" href="#">
+                <span><</span>
+                <span>kmehtab</span>
+                <span>/></span>
+            </a>
+            <a class="nav-item nav-link" id="nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link active" id="nav-link" href="my-project.html">Projects</a>
+            <a class="nav-item nav-link" id="nav-link" href="about-me.html">About me</a>
+        </div>
+    </nav>
+    <!-- jumbotron start here -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-3" id="header-1">Hello, World!</h1>
+            <p class="lead" id="header-2">My name is Khan Mehtab (kmehtab)</p>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="js\parallax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
