--- a/index.html
+++ b/index.html
@@ -6,57 +6,83 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css\style.css">
     <!-- title start here -->
-    <title>Home || <kmehtab/> </title>
+    <title>Home ||
+        <kmehtab/> </title>
     <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <!-- nav-bar start here -->
-       <nav class="navbar navbar-expand fixed-top" id="nav">
-           <div class="nav navbar-nav">
-                <a class="navbar-brand brand active" href="index.html">
-                        <span><</span>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="nav">
+        <div class="nav navbar-nav">
+            <a class="navbar-brand brand active" href="#">
+                <span>
+                    <</span>
                         <span>kmehtab</span>
                         <span>/></span>
-                    </a>
-            <a class="nav-item nav-link active" id="nav-link" href="index.html">Home</span></a>
-            <a class="nav-item nav-link" id="nav-link" href="my-project.html">Projects</a>
-            <a class="nav-item nav-link" id="nav-link" href="about-me.html">About me</a>
-           </div>
-       </nav>
-       <!-- jumbotron start here -->
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-3" id="header-1">Hello, World!</h1>
-                <p class="lead" id="header-2">My name is Khan Mehtab (kmehtab)</p>
-            </div>
+            </a>
         </div>
-        <!-- parallex effect -->
-        <div class="parallax-window" data-parallax="scroll" data-image-src="\img\img-01.jpg"></div>
-        <!-- paragraph start here -->
-       <div class="container p">
-           <p class="p1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reprehenderit iusto inventore voluptas vitae ratione cumque fuga? Aspernatur adipisci quidem ratione laudantium quia pariatur odit repellat earum deserunt velit. Consectetur.
-            Alias repellat, possimus deleniti fuga reprehenderit saepe delectus, optio recusandae cumque labore, magnam earum ex tempore deserunt accusantium eveniet facilis vero quo nihil maxime sunt pariatur eligendi iusto reiciendis? Ut.
-            Voluptatum, hic voluptatem? In et deserunt odio quisquam cupiditate repellendus mollitia facilis dolor consectetur, quia debitis. Neque officiis nulla reprehenderit ab maxime adipisci quaerat delectus. Laborum explicabo repudiandae perferendis aspernatur!
-            Asperiores exercitationem sequi aliquid beatae, rem nostrum fuga non laudantium! Molestias iusto, adipisci voluptatem iure deleniti consectetur odio architecto quae consequatur tempore veritatis, alias ad quasi accusamus facere suscipit ducimus.
-            Delectus quam, quisquam soluta praesentium sequi possimus. Consequatur ducimus veritatis aliquam reiciendis. Libero maiores sequi accusantium autem ipsum. Veritatis quibusdam nam consequuntur. Perferendis, nulla maiores? Exercitationem similique placeat earum eligendi!
-            <hr>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reprehenderit iusto inventore voluptas vitae ratione cumque fuga? Aspernatur adipisci quidem ratione laudantium quia pariatur odit repellat earum deserunt velit. Consectetur.
-            Alias repellat, possimus deleniti fuga reprehenderit saepe delectus, optio recusandae cumque labore, magnam earum ex tempore deserunt accusantium eveniet facilis vero quo nihil maxime sunt pariatur eligendi iusto reiciendis? Ut.
-            Voluptatum, hic voluptatem? In et deserunt odio quisquam cupiditate repellendus mollitia facilis dolor consectetur, quia debitis. Neque officiis nulla reprehenderit ab maxime adipisci quaerat delectus. Laborum explicabo repudiandae perferendis aspernatur!
-            Asperiores exercitationem sequi aliquid beatae, rem nostrum fuga non laudantium! Molestias iusto, adipisci voluptatem iure deleniti consectetur odio architecto quae consequatur tempore veritatis, alias ad quasi accusamus facere suscipit ducimus.
-            Delectus quam, quisquam soluta praesentium sequi possimus. Consequatur ducimus veritatis aliquam reiciendis. Libero maiores sequi accusantium autem ipsum. Veritatis quibusdam nam consequuntur. Perferendis, nulla maiores? Exercitationem similique placeat earum eligendi!
+        <button class="navbar-toggler nav-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-item nav-link active" id="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" id="nav-link" href="my-project.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" id="nav-link" href="about-me.html">About me</a>
+                </li>
+            </ul>
+    </nav>
+    <!-- jumbotron start here -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-3" id="header-1">Hello, World!</h1>
+            <p class="lead" id="header-2">My name is Khan Mehtab (kmehtab)</p>
+        </div>
+    </div>
+    <!-- parallex effect -->
+    <div class="parallax-window" data-parallax="scroll" data-image-src="\img\img-01.jpg"></div>
+    <!-- paragraph start here -->
+    <div class="container p">
+        <p class="p1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reprehenderit iusto inventore voluptas vitae ratione cumque
+            fuga? Aspernatur adipisci quidem ratione laudantium quia pariatur odit repellat earum deserunt velit. Consectetur.
+            Alias repellat, possimus deleniti fuga reprehenderit saepe delectus, optio recusandae cumque labore, magnam earum
+            ex tempore deserunt accusantium eveniet facilis vero quo nihil maxime sunt pariatur eligendi iusto reiciendis?
+            Ut. Voluptatum, hic voluptatem? In et deserunt odio quisquam cupiditate repellendus mollitia facilis dolor consectetur,
+            quia debitis. Neque officiis nulla reprehenderit ab maxime adipisci quaerat delectus. Laborum explicabo repudiandae
+            perferendis aspernatur! Asperiores exercitationem sequi aliquid beatae, rem nostrum fuga non laudantium! Molestias
+            iusto, adipisci voluptatem iure deleniti consectetur odio architecto quae consequatur tempore veritatis, alias
+            ad quasi accusamus facere suscipit ducimus. Delectus quam, quisquam soluta praesentium sequi possimus. Consequatur
+            ducimus veritatis aliquam reiciendis. Libero maiores sequi accusantium autem ipsum. Veritatis quibusdam nam consequuntur.
+            Perferendis, nulla maiores? Exercitationem similique placeat earum eligendi!
+            <hr> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reprehenderit iusto inventore voluptas vitae ratione
+            cumque fuga? Aspernatur adipisci quidem ratione laudantium quia pariatur odit repellat earum deserunt velit.
+            Consectetur. Alias repellat, possimus deleniti fuga reprehenderit saepe delectus, optio recusandae cumque labore,
+            magnam earum ex tempore deserunt accusantium eveniet facilis vero quo nihil maxime sunt pariatur eligendi iusto
+            reiciendis? Ut. Voluptatum, hic voluptatem? In et deserunt odio quisquam cupiditate repellendus mollitia facilis
+            dolor consectetur, quia debitis. Neque officiis nulla reprehenderit ab maxime adipisci quaerat delectus. Laborum
+            explicabo repudiandae perferendis aspernatur! Asperiores exercitationem sequi aliquid beatae, rem nostrum fuga
+            non laudantium! Molestias iusto, adipisci voluptatem iure deleniti consectetur odio architecto quae consequatur
+            tempore veritatis, alias ad quasi accusamus facere suscipit ducimus. Delectus quam, quisquam soluta praesentium
+            sequi possimus. Consequatur ducimus veritatis aliquam reiciendis. Libero maiores sequi accusantium autem ipsum.
+            Veritatis quibusdam nam consequuntur. Perferendis, nulla maiores? Exercitationem similique placeat earum eligendi!
 
-           </p>
-       </div>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-            <script src="js\parallax.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-    </body>
+        </p>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="js\parallax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
 
-    </html>
+</html>
