--- a/my-project.html
+++ b/my-project.html
@@ -14,13 +14,12 @@
 
 <body>
     <!-- nav-bar start here -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="nav">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="nav">
         <div class="nav navbar-nav">
             <a class="navbar-brand brand active" href="#">
-                <span>
-                    <</span>
-                        <span>kmehtab</span>
-                        <span>/></span>
+                <span><</span>
+                <span>kmehtab</span>
+                <span>></span>
             </a>
         </div>
         <button class="navbar-toggler nav-color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -43,7 +42,7 @@
     <!-- jumbotron start here -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-3" id="header-1">Hello, World!</h1>
+            <h1 id="header-1">Hello, World!</h1>
             <p class="lead" id="header-2">My name is Khan Mehtab (kmehtab)</p>
         </div>
     </div>
